assets/css/style.css
body {
    background-color: lightgray;
    padding: 5px;
}

header {
    background-color: lightgray;
    display: flex;
}

.banner {
    width: 100%;
    max-width: 700px;
    padding: 5px;
    margin: 5px;
}

h1, h2, h3 {
    margin: 5px;
    padding: 5px;
    color:rgb(197, 143, 236); 
}

.nav-item {
    display: inline;
    list-style-type: none;
    align-items: right;
    margin: 7px;
    padding: 5px;
}

article {
    padding: 10px;
    border: 2px solid grey;
}

.small-projects-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
}

.project-secondary {
    flex-basis: 350px;
    box-sizing: border-box;
    margin:5px;
}

.main-article-photo {
    width: 100%;
}

.thumbnail {
    width: 100%;
}

section ul {
    display:inline-flex;
    list-style-type: none;
    justify-content: space-evenly;
}

